# Data-Engineering-Programming---9ABDR-Final

./: .gitignore  CODE_REVIEW.md  ESCOPO.md  Pipfile  README.md  TAREFAS.md  pyproject.toml
data/: README.md
src/: main.py
src/business/: logic.py
src/config/: logging.py  settings.py
src/data_io/: writer.py
src/io/: reader.py  writer.py
src/pipeline/: orchestrator.py
src/spark/: session.py
